--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "flash": "^1.1.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
@@ -25,6 +26,7 @@
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.16.0",
     "razorpay": "^2.9.5"
   }
 }
