--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.7",
     "connect-flash": "^0.1.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
