--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.18.1",
     "flash": "^1.1.0",
     "moment": "^2.30.1",
+    "mongodb": "^6.17.0",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
